Moved Games to portfolio homepage

--- a/games.html
+++ b/games.html
@@ -17,18 +17,17 @@
         <div class="acontainer">
             <a class="bar-item bar-padding bar-hover" href="resume.html">Resume</a>
             <div class="dropdown">
-                <a class="dropdown-label bar-padding bar-hover" href="games.html">Games</a>
+                <a class="dropdown-label bar-padding bar-hover" href="index.html">Games</a>
                 <div class="dropdown-content">
-                    <a class="dropdown-item"  href="games.html#unity">Unity</a>
-                    <a class="dropdown-item" href="games.html#unreal">Unreal</a>
-                    <a class="dropdown-item"  href="games.html#godot">Godot</a>
+                    <a class="dropdown-item"  href="index.html#unity">Unity</a>
+                    <a class="dropdown-item" href="index.html#unreal">Unreal</a>
+                    <a class="dropdown-item"  href="index.html#godot">Godot</a>
                 </div>
             </div>
             <a class="bar-item bar-padding bar-hover" href="nongames.html">Non-Games</a>
             <a class="bar-item bar-padding bar-hover" href="contact.html">Contact</a>
         </div>
     </header> 
-    
     <div class="container">
         <div class="content-section">
             <div id="unity" class="content-subsection">
