--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/css/reset.css" />
     <link rel="stylesheet" href="resources/css/style.css" />
-    <link rel="stylesheet" href="resources/css/wip.css" />
     <title>James P Portfolio</title>
 </head>
 <body>
@@ -18,11 +17,11 @@
         <div class="acontainer">
             <a class="bar-item bar-padding bar-hover" href="resume.html">Resume</a>
             <div class="dropdown">
-                <a class="dropdown-label bar-padding bar-hover" href="games.html">Games</a>
+                <a class="dropdown-label bar-padding bar-hover" href="index.html">Games</a>
                 <div class="dropdown-content">
-                    <a class="dropdown-item"  href="games.html#unity">Unity</a>
-                    <a class="dropdown-item" href="games.html#unreal">Unreal</a>
-                    <a class="dropdown-item"  href="games.html#godot">Godot</a>
+                    <a class="dropdown-item"  href="index.html#unity">Unity</a>
+                    <a class="dropdown-item" href="index.html#unreal">Unreal</a>
+                    <a class="dropdown-item"  href="index.html#godot">Godot</a>
                 </div>
             </div>
             <a class="bar-item bar-padding bar-hover" href="nongames.html">Non-Games</a>
@@ -30,12 +29,216 @@
         </div>
     </header> 
     
-    
-    <div class="under-construction">
-        <div>
-            <img src="resources/images/construction.png" />
-            <h2>Portfolio still under construction...</h2>
-            <h3>Check back again soon!</h3>
+    <div class="container">
+        <div class="content-section">
+            <div id="unity" class="content-subsection">
+                <h1 >Unity</h1>
+                <div class="content-preview content-left">
+                    <div class="content-wrapper content-base">
+                        <div class="center-content">
+                            <iframe id="media-left" width="560" height="315" src="https://www.youtube.com/embed/E6zJkktHPpA?si=uCf81BqCzj12G9Iy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <h2 class="project-name">Gamechngrz: Universe</h2>
+                            <h3 class="project-company">NE1:Plays Inc.</h3>
+                            <h4 class="project-role">Lead Programmer</h4>
+                        </div>
+                        <p class="content-description">Gamechngrz: Universe is a suite of games intended to test career-related aptitudes in high-school students. 
+                            These aptitudes are then combined with a student's reported interests to provide a roadmap to the career that best aligns with these parameters.
+                                It also acts as a hub for career exploration, allowing students to see live reports of a number of career related data-points, including expected education level, salary, and average career length.
+                            </p>
+                    </div>
+                    <button type="button" class="content-button content-button-right">
+                        <img src="resources\images\chevron-right.svg" />
+                    </button>
+                    <div class="content-wrapper content-slideout">
+                        <div>
+                            <h3>Involvement Timeline:</h3>
+                            <h4>February 2022 - October 2023</h4>
+                        </div>
+                        <div>
+                            <h3>Job description:</h3>
+                            <p>Responsible for all technological aspects of this game, including writing all gameplay and UI scripts, creation of webservices,
+                                and management of databases. Collaborated with a singular artist to design all gameplay systems and implement all the art present. Interpeted
+                                research data to inform game designs (relating to career aptitudes and student interests). Managed and mainatined technical documentation.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Technologies Utilized:</h3>
+                            <h4>Unity, MySQL, PHP</h4>
+                        </div>
+                        <div>
+                            <h3>See More:</h3>
+                            <h4>Code snippets coming soon! (Awaiting permission)</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="content-preview content-right">
+                    <div class="content-wrapper content-slideout">
+                        <div>
+                            <h3>Involvement Timeline:</h3>
+                            <h4>March 2021 - February 2022</h4>
+                        </div>
+                        <div>
+                            <h3>Job description:</h3>
+                            <p>Created simple Unity games for the purpose of tutorializing game creation and teaching programming. Responsible for designing and building games,
+                                removing appropriate content for the students to replace themselves, and writing, recording, and editing a tutorial series for each project every month.
+                                Wrote automated tests to determine if students wrote their code to the specifications mentioned in the tutorial series. Outlined and informed teachers of
+                                best practices in the classroom. Assisted in the hiring process and onboarding of new teachers.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Technologies Utilized:</h3>
+                            <h4>Unity, PHP, DaVinci Resolve (Video Editor)</h4>
+                        </div>
+                        <div>
+                            <h3>See More:</h3>
+                            <a href="https://github.com/jphill97/PortfolioSnippets/blob/27b5d23018a7166700e227befe9c5452ab8cb47f/Techability/Playlists.md"><h4>Complete list of all my tutorials</h4></a>
+                        </div>
+                    </div>
+                    <button type="button" class="content-button  content-button-left">
+                        <img src="resources\images\chevron-left.svg" />
+                    </button>
+                    <div class="content-wrapper content-base">
+                        <div class="center-content">
+                            <iframe id="media-right" width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=DQNnFreR1mJoFiJ9&amp;list=PLIbjwvM7wTuDyVTPB7iclkIBeSCvqdAmA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <h2 class="project-name">Techability Coding School</h2>
+                            <h3 class="project-company">Techability Inc.</h3>
+                            <h4 class="project-role">Unity Curriculum Developer</h4>
+                        </div>
+                        <p>Techability Inc. is an entirely online school for K-12 students to learn programming. Curriculum at Techability is divided at the 4th grade level,
+                            where students below this grade level are taught in MIT's Scratch platform, while the remaining students are taught in Unity. Each curriculum unit spans 
+                            one month, in which students spend their time in class learning how to use their respective tools and how to apply programming concepts to make games. Students are also
+                            asked to follow along with a new tutorial series, posted each month, that walks the student through creation of a complete game project.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="content-preview content-left">
+                    <div class="content-wrapper content-base">
+                        <div class="center-content">
+                            <iframe id="media-left" width="560" height="315" src="https://www.youtube.com/embed/Sru8Mh55afQ?si=KOTFdWD5SMwPxaNA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <h2 class="project-name">EDGE</h2>
+                            <h3 class="project-company">Starforged Studios</h3>
+                            <h4 class="project-role">Technical Designer</h4>
+                        </div>
+                        <p class="content-description">EDGE is an open-world RPG where the player character, Thea, must navigate an expansive world of islands in the sky to recruit 
+                            new inhabitants for her village. Thea must build each recuit their very own home, allowing Thea to control the size and shape of the village. 
+                            Each new villager that arrives embues a magical stone at the towns center, that not only empowers the city, but Thea herself. Thea uses
+                            the magic granted to her by this stone strengthens her weapons and spell-casting ability.
+                        </p>
+                    </div>
+                    <button type="button" class="content-button content-button-right">
+                        <img src="resources\images\chevron-right.svg" />
+                    </button>
+                    <div class="content-wrapper content-slideout">
+                        <div>
+                            <h3>Involvement Timeline:</h3>
+                            <h4>June 2020 - March 2021</h4>
+                        </div>
+                        <div>
+                            <h3>Job description:</h3>
+                            <p>Implementation of abstract gameplay systems, built and designed by other designers and engineers. This includes building construction and customization, food/cooking, 
+                                various UI elements, among others. Participated and contributed to design meetings and programmer meetings. Acted as a intermediary for the design and programming teams,
+                                effectively communicating issues and concerns between teams as development progressed. Role expanded to full systems implemenation as the project advanced.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Technologies Utilized:</h3>
+                            <h4>Unity</h4>
+                        </div>
+                        <div>
+                            <h3>See More:</h3>
+                            <a href="https://www.youtube.com/watch?v=yKIA5mP7HIY"><h4>Another look at EDGE gameplay</h4></a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="content-subsection">
+                <h1 class="no-subtitle" id="unreal">Unreal Engine</h1>
+                <div class="content-preview content-right">
+                    <div class="content-wrapper content-slideout">
+                        <div>
+                            <h3>Involvement Timeline:</h3>
+                            <h4>October 2021 - Ongoing</h4>
+                        </div>
+                        <div>
+                            <h3>Job description:</h3>
+                            <p>One half of Tiny Boat, acting as the sole technical developer. First full-scale project developed in Unreal Engine. Responsible for implementation of all systems, including fishing/fish behvaiors,
+                                cooking, crafting, player movement, shops, vehicles, interactions, and more. Systems built almost entirely through blueprints, with supplimental C++ utilized when required. Regular contribution
+                                to design of any and all systems, and collaboration with the other developer in Tiny Boat to determine appropriate art and other assets. Co-ordinated with contractors to produce sound and UI assets. 
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Technologies Utilized:</h3>
+                            <h4>Unreal Engine, Perforce</h4>
+                        </div>
+                        <div>
+                            <h3>See More:</h3>
+                            <h4 id="coming-soon">Alpha reveal coming soon!</h4>
+                        </div>
+                    </div>
+                    <button type="button" class="content-button  content-button-left">
+                        <img src="resources\images\chevron-left.svg" />
+                    </button>
+                    <div class="content-wrapper content-base">
+                        <div class="center-content">
+                            <img id="media-right" src="resources\images\LL.PNG" />
+                            <h2 class="project-name">Little Lake</h2>
+                            <h3 class="project-company">Tiny Boat</h3>
+                            <h4 class="project-role">Technical Director</h4>
+                        </div>
+                        <p class="content-description">Little Lake is an open-world fishing adventure, in which Nulia, daughter of the legendary fisherman Koga, must return to her home town
+                            on Lake Little to save her father, after he was found unconscious while trying to track down "The Big One". Nulia must re-kindle the love for fishing her father instilled in her,
+                            and use it to retrace her father's steps in hopes of finding a cure for his seemingly un-treatable illness. She must utilize a slew of fishing equipment including a boat, traps, magical skipping
+                            stones and more to earn the trust and respect of her father's closest peers in an effort to learn just what her father was trying to do.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content-subsection">
+                <h1 class="no-subtitle" id="godot">Godot</h1>
+                <div class="content-preview content-left">
+                    <div class="content-wrapper content-base">
+                        <div class="center-content">
+                            <img src="resources\images\GodotIcon.png" />
+                            <h2 class="project-name">Gamechngrz: Universe (Godot Redesign)</h2>
+                            <h3 class="project-company">NE1:Plays Inc.</h3>
+                            <h4 class="project-role">Lead Programmer</h4>
+                        </div>
+                        <p class="content-description">The Godot redesign of Gamechngrz: Universe takes the core principles of the original Unity game, and abstracts it into a platform, rather than a 
+                            single game. Content is presented not through gameplay or thematic events but instead a unified menu system, complete with live updated goals and a sortable, modern UI. This redesign was intended
+                            to bring the project more in-line with other game and software suites the current generation of students are familiar with.
+                        </p>
+                    </div>
+                    <button type="button" class="content-button content-button-right">
+                        <img src="resources\images\chevron-right.svg" />
+                    </button>
+                    <div class="content-wrapper content-slideout">
+                        <div>
+                            <h3>Involvement Timeline:</h3>
+                            <h4>October 2023 - February 2024</h4>
+                        </div>
+                        <div>
+                            <h3>Job description:</h3>
+                            <p>Ported all relevant, existing systems from Unity version of this project to Godot. Re-wrote systems in GDScript, including some full re-writes and some translations. Re-wrote webservice hooks
+                                to match with Godot standards. Built modern menu structure, including favoriting games, dynamic games list, and a student profile. Implemented art assets as ported from Unity, and designed UI art 
+                                to replace placeholders wherever necessary. 
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Technologies Utilized:</h3>
+                            <h4>Godot, MySQL, PHP</h4>
+                        </div>
+                        <div>
+                            <h3>See More:</h3>
+                            <h4>Code snippets coming soon! (Awaiting permission)</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
