--- a/resume.html
+++ b/resume.html
@@ -18,11 +18,11 @@
         <div class="acontainer">
             <a class="bar-item bar-padding bar-hover" href="resume.html">Resume</a>
             <div class="dropdown">
-                <a class="dropdown-label bar-padding bar-hover" href="games.html">Games</a>
+                <a class="dropdown-label bar-padding bar-hover" href="index.html">Games</a>
                 <div class="dropdown-content">
-                    <a class="dropdown-item"  href="games.html#unity">Unity</a>
-                    <a class="dropdown-item" href="games.html#unreal">Unreal</a>
-                    <a class="dropdown-item"  href="games.html#godot">Godot</a>
+                    <a class="dropdown-item"  href="index.html#unity">Unity</a>
+                    <a class="dropdown-item" href="index.html#unreal">Unreal</a>
+                    <a class="dropdown-item"  href="index.html#godot">Godot</a>
                 </div>
             </div>
             <a class="bar-item bar-padding bar-hover" href="nongames.html">Non-Games</a>
