Added missing non-games content caption

--- a/nongames.html
+++ b/nongames.html
@@ -84,9 +84,9 @@
                             <h3 class="project-company">-</h3>
                             <h4 class="project-role">Web Developer</h4>
                         </div>
-                        <p class="content-description">The Godot redesign of Gamechngrz: Universe takes the core principles of the original Unity game, and abstracts it into a platform, rather than a 
-                            single game. Content is presented not through gameplay or thematic events but instead a unified menu system, complete with live updated goals and a sortable, modern UI. This redesign was intended
-                            to bring the project more in-line with other game and software suites the current generation of students are familiar with.
+                        <p class="content-description">This website was developed by entirely by hand, using the minimum amount of pre-built CSS or HTML structures. While in a normal development environment, I would not shy away
+                            from using the materials available to me, I chose to develop as much of this site by hand as a means to practice my CSS and HTML skills. I will continue to add content to this site, including game projects 
+                            and experiments with Javascript. 
                         </p>
                     </div>
                     <button type="button" class="content-button content-button-right">
@@ -95,7 +95,7 @@
                     <div class="content-wrapper content-slideout">
                         <div>
                             <h3>Involvement Timeline:</h3>
-                            <h4>June 2020 - March 2021</h4>
+                            <h4>January 2024 - Ongoing</h4>
                         </div>
                         <div>
                             <h3>Job description:</h3>
@@ -106,11 +106,11 @@
                         </div>
                         <div>
                             <h3>Technologies Utilized:</h3>
-                            <h4>Unity, MySQL, PHP</h4>
+                            <h4>HTML, CSS</h4>
                         </div>
                         <div>
                             <h3>See More:</h3>
-                            <h4>-</h4>
+                            <a href="https://github.com/jphill97/jphill97.github.io"><h4>View the Source Code</h4></a>
                         </div>
                     </div>
                 </div>
