Added proper description to website section

--- a/nongames.html
+++ b/nongames.html
@@ -99,9 +99,9 @@
                         </div>
                         <div>
                             <h3>Job description:</h3>
-                            <p>Responsible for all technological aspects of this game, including writing all gameplay and UI scripts, creation of webservices,
-                                and management of databases. Collaborated with a singular artist to design all gameplay systems and implement all the art present. Interpeted
-                                research data to inform game designs (relating to career aptitudes and student interests). Managed and mainatined technical documentation.
+                            <p>Began a course on HTML and CSS around the turn of the new year (2024), and decided to flex the knowledge gained by building my portfolio site from scratch. I have been surprised how much I have been able to 
+                                bend a web-page to my will--pieces like my expanding gradients were particularly exciting to complete. My understanding of visual design and UI/UX flow will hopefully come through in this first attempt at a 
+                                proper web-page, though I know as I continue to build websites and hone my usage of CSS and HTML, my skills will improve drastically.
                             </p>
                         </div>
                         <div>
